[gd_scene load_steps=7 format=3 uid="uid://c7h5p4clo0qly"]

[ext_resource type="Script" path="res://scripts/falling_platform.gd" id="1_dxgw8"]
[ext_resource type="Texture2D" uid="uid://b7iomj5dpuyhs" path="res://addons/new_assets/falling-platform-brown.png" id="1_ffaa1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2ovq"]
size = Vector2(32, 16)

[sub_resource type="Animation" id="Animation_hicou"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 0), Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_qnmhw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qnfij"]
_data = {
"RESET": SubResource("Animation_qnmhw"),
"shake": SubResource("Animation_hicou")
}

[node name="FallingPlatform" type="AnimatableBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_dxgw8")

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_ffaa1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d2ovq")
one_way_collision = true

[node name="RespawnTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qnfij")
}

[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
